univention-virtual-machine-manager-daemon (4.0.21-1) unstable; urgency=low

  * Bug #36927: Fix upgrade problem.
  * Bug #37040: Improve uvmm-check script.
  * Bug #34352: Log restart output.

 -- Philipp Hahn <hahn@univention.de>  Wed, 07 Jan 2015 18:13:16 +0100

univention-virtual-machine-manager-daemon (4.0.20-10) unstable; urgency=low

  * Bug #37301: Update cloud instance info more often after changed state

 -- Andreas Peichert <peichert@univention.de>  Thu, 18 Dec 2014 15:44:32 +0100

univention-virtual-machine-manager-daemon (4.0.20-9) unstable; urgency=low

  * Bug #36380: Update processing of wait for changed instance state 

 -- Andreas Peichert <peichert@univention.de>  Thu, 11 Dec 2014 17:07:04 +0100

univention-virtual-machine-manager-daemon (4.0.20-8) unstable; urgency=low

  * Bug #36105: Fix VNC running on localhost only.

 -- Philipp Hahn <hahn@univention.de>  Thu, 11 Dec 2014 09:26:54 +0100

univention-virtual-machine-manager-daemon (4.0.20-7) unstable; urgency=low

  * Bug #36380: Add progressbar while waiting for changed instance state

 -- Andreas Peichert <peichert@univention.de>  Thu, 04 Dec 2014 16:11:42 +0100

univention-virtual-machine-manager-daemon (4.0.20-6) unstable; urgency=low

  * Bug #36585: Fix header button to close only cloud connection wizard

 -- Andreas Peichert <peichert@univention.de>  Thu, 04 Dec 2014 13:05:42 +0100

univention-virtual-machine-manager-daemon (4.0.20-5) unstable; urgency=low

  * Bug #36906: add tooltip for security group and key pair in instance wizard

 -- Andreas Peichert <peichert@univention.de>  Thu, 27 Nov 2014 16:48:16 +0100

univention-virtual-machine-manager-daemon (4.0.20-4) unstable; urgency=low

  * Bug #36905: open https link of cloud instance in a new browser tab

 -- Andreas Peichert <peichert@univention.de>  Thu, 27 Nov 2014 11:57:38 +0100

univention-virtual-machine-manager-daemon (4.0.20-3) unstable; urgency=low

  * Bug #36988: Fix noVNC temporary file location
